--- a/frontend/src/components/FormElement/FormElement.css
+++ b/frontend/src/components/FormElement/FormElement.css
@@ -1,4 +1,3 @@
-
 .form-item {
 	margin-right: 10px;
 	flex-grow: 1;
@@ -9,7 +8,6 @@
 	font-weight: normal;
 	font-family: "Inter", sans-serif;
 	text-decoration: underline;
-
 }
 
 .form-item span {
@@ -20,7 +18,10 @@
 	margin-right: 0px;
 }
 
-
+.input-style {
+	/* border: solid blue 2px; */
+	width: 100%;
+}
 
 .date-height {
 	/* height: 10px; */
@@ -33,13 +34,15 @@
     display: block;
 }
 
-
 /* Checkbox style */
 .check-with-text {
 	display: flex;
 	align-items: center;
 	gap: 8px;
 }
+/* 
+.check-with-text input[type="checkbox"] {
+} */
 
 .check-with-text label {
 	/* color: #a0aec0; */
@@ -48,5 +51,4 @@
 	font-weight: normal;
 	font-family: "Inter", sans-serif;
 	text-decoration: underline;
-
 }
