Animated MIUI dialog box
 - Using Dialog component with Slide transition

--- a/frontend/src/mainpage.css
+++ b/frontend/src/mainpage.css
@@ -12,3 +12,17 @@
     max-width: 33.33%;
   }
 } */
+
+.info-card{
+  display: block;
+	margin: 0 auto;
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 600px;
+	flex-direction: column;
+	overflow-y: auto;
+	min-width: 200px;
+	padding: 30px;
+  background-color: pink;
+  height: 100%;
+}
